fix(Dashboard styling): Fixed button styling on tables and ensure flex-wrap on mobile

--- a/src/sass/modules/account.scss
+++ b/src/sass/modules/account.scss
@@ -25,7 +25,10 @@
 .dashboard-button-container {
     display: flex;
     justify-content: flex-start;
-    flex-wrap: wrap;
+
+    @media #{$mobile} {
+        flex-wrap: wrap;
+    }
 
     a {
         text-align: center;
